--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
 
                 <!-- Formspree Integration: Simple & No SDK needed -->
-                <form class="contact-form" id="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                <form class="contact-form" id="contact-form" action="https://formspree.io/f/mykgbaza" method="POST">
                     <div class="form-group">
                         <label for="name">Your Name</label>
                         <input type="text" id="name" name="from_name" placeholder="Prakash ..." required>
